Fix: Adjust text position on mobile homepage
Modified 'index-screen.scss' to set 'margin-top: 100px;'
for the '.index-screen__title-area' on mobile screens
(max-width: 768px).

This overrides a previous 'margin-top: 200px;' inherited
from a wider breakpoint, moving the text higher on the page
to sit more appropriately below the mobile top bar. This
addresses your feedback that the text was too centered vertically.

--- a/src/assets/index-screen.scss
+++ b/src/assets/index-screen.scss
@@ -60,6 +60,10 @@
             }
         }
 
+        @media (max-width: 768px) {
+            margin-top: 100px;
+        }
+
         h1 {
             font-family: Baloo;
             font-weight: 400;
